# centerpoint_jetson

./: .gitignore  README.md
centerpoint_voxelnet_ros2_ws/: .gitignore  README.md
centerpoint_voxelnet_ros2_ws/docs/: benchmark_2026-07-23.md
centerpoint_voxelnet_ros2_ws/scripts/: benchmark_waymo.sh  build.sh  run_rviz.sh  run_waymo_bag.sh  setup_spconv.sh
centerpoint_voxelnet_ros2_ws/src/centerpoint_voxelnet_ros/: package.xml  setup.cfg  setup.py
centerpoint_voxelnet_ros2_ws/src/centerpoint_voxelnet_ros/centerpoint_voxelnet_ros/: inference_node.py
centerpoint_voxelnet_ros2_ws/src/centerpoint_voxelnet_ros/launch/: inference.launch.py
centerpoint_voxelnet_ros2_ws/src/centerpoint_voxelnet_ros/rviz/: voxelnet.rviz
docs/: CODE_AND_FILE_STRUCTURE.md  KOREAN_MANUAL.md
docs/progress/: 2026-07-17_inference_optimization.md  2026-07-23_signal_processing_fps.md
scripts/: build.sh  run_rviz.sh  run_waymo_bag.sh
src/centerpoint_pointpillars_ros/: package.xml  setup.cfg  setup.py
src/centerpoint_pointpillars_ros/centerpoint_pointpillars_ros/: __init__.py  inference_node.py
src/centerpoint_pointpillars_ros/launch/: inference.launch.py
src/centerpoint_pointpillars_ros/rviz/: pointpillars.rviz
