<?xml version="1.0"?>
<package format="3">
  <name>centerpoint_voxelnet_ros</name>
  <version>0.1.0</version>
  <description>Native Jetson CenterPoint VoxelNet inference and RViz2 visualization.</description>
  <maintainer email="kopti@example.com">kopti</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
